--- a/README
+++ b/README
@@ -8,10 +8,10 @@
 
 A collection of templates for Void Linux, to be used with xbps-src.
 
-# usage
+USAGE
 
 Download xbps-src, and copy one of the desired template folders to srcpkgs. Look at xbps-src's documentation to learn how to use xbps-src.
 
-# packages
+PACKAGES
 
 There's nothing here yet.
